@@ -1,4 +1,4 @@
-.TH HDPARM 8 "October 2010" "Version 9.33"
+.TH HDPARM 8 "October 2010" "Version 9.34"
 
 .SH NAME
 hdparm \- get/set SATA/IDE device parameters
